# Splunk-ETW

./: CMakeLists.txt  README.md
Splunk-ETW/: CMakeLists.txt
Splunk-ETW/README/: inputs.conf.spec
Splunk-ETW/default/: app.conf
Splunk-ETW/src/: ETWWriter.cs  Forwarder.cs  Manifest.cs  ManifestParser.cs  NullParser.cs  Parser.cs  ProviderGuid.cs  SplunkETW.cs  TraceLoggingParser.cs  TraceManager.cs
Splunk-ETW/test/: EventRecord.cs  Forwarder.cs  ManifestParser.cs  NullParser.cs  ProviderGuid.cs  TestWriter.cs  TraceLoggingParser.cs  TraceManager.cs
profile/: cert.ini
